<resources>
    <string name="app_name">Project 3</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>


    <!--String related to Maps -->

    <string name="action_settings">Setting</string>
    <string name="google_place_api">AIzaSyDUsB2cLHnIOioDOZuX6XrAZcdvYaoBN3A</string>

    <!--String related to php server-->
    <string name="app_name3">php_extended</string>
    <string name="title_activity_maps">Map</string>

    <!--String related to User Name-->
    <string name="hint_UserName">Enter user name</string>
    <string name="hint_Password">Enter password</string>
    <string name="hint_ConfirmPassword">Confirm password</string>
    <string name="hint_latitude">Latitude</string>
    <string name="hint_longitude">Longitude</string>
    <string name="button_CreateAccount">Create Account</string>
    <string name="button_Home">Set Home</string>
    <string name="action_sign_up">Sign Up</string>

</resources>
