<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:gravity="center_vertical"
              android:weightSum="1">


    <!-- TODO_DONE: EditText UI Control for editTextUserName -->
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_UserName"
        android:inputType="text"
        android:hint="@string/hint_UserName"
        android:layout_gravity="center"/>

    <!-- TODO_DONE: EditText UI Control for editTextPassword -->

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_Password"
        android:inputType="text"
        android:hint="@string/hint_Password"
        android:layout_gravity="center"/>

    <!-- TODO_DONE: EditText UI Control for editTextConfirmPassword -->

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_ConfirmPassword"
        android:inputType="text"
        android:hint="@string/hint_ConfirmPassword"
        android:layout_gravity="center"/>

    <!-- TODO_DONE: EditText UI Control for Latitude -->

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_latitude"
        android:inputType="text"
        android:hint="@string/hint_latitude"
        android:layout_gravity="center"/>

    <!-- TODO_DONE: EditText UI Control for Longitude-->

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_longitude"
        android:inputType="text"
        android:hint="@string/hint_longitude"
        android:layout_gravity="center"/>

    <!-- TODO_DONE: Button UI Control for buttonCreateAccount -->

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_CreateAccount"
        android:layout_gravity="center"
        android:text="@string/button_CreateAccount"
        android:padding="18dp"/>

    <!-- TODO_DONE: Button UI Control for Home_Button -->

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_HomeLocation"
        android:layout_gravity="center"
        android:text="@string/button_Home"
        android:padding="18dp"/>

</LinearLayout>